--- a/index.html
+++ b/index.html
@@ -3927,7 +3927,7 @@
 						                        <br><br>
 						                        <div class="info-col">
 						                            <b>Date: </b>18 Feb<br>
-						                            <b>Time: </b>10:00 am - 2:00 pm<br>
+						                            <b>Time: </b>10:00 am<br>
 						                            <b>Venue: </b>Edusat Hall<br>
 						                        </div>
 						                        <div class="info-col"></div>
@@ -3968,7 +3968,7 @@
 						                        <br><br>
 						                        <div class="info-col">
 						                            <b>Date: </b>19 Feb<br>
-						                            <b>Time: </b>11:00 am - 2:00 pm<br>
+						                            <b>Time: </b>11:00 am<br>
 						                            <b>Venue: </b>Edusat Hall<br>
 						                        </div>
 						                        <div class="info-col"></div>
@@ -4011,7 +4011,7 @@
 						                        </div>
 						                        <div class="info-col">
 						                            <b>Date: </b>20 Feb<br>
-						                            <b>Time: </b>11:00 am - 2:00 pm<br>
+						                            <b>Time: </b>11:00 am<br>
 						                            <b>Venue: </b>Edusat Hall<br>
 						                        </div>
 						                        <div class="info-col"></div>
