--- a/sponsors.html
+++ b/sponsors.html
@@ -70,6 +70,11 @@
                         <div class="sponsor-image"><center><img src="assets/sponsors/poker.png"></center>
                         </div>
                 </div>
+                <div class="flex-item">
+                    <div class="sponsor-type"><center></center>FoodCity Sponsor</div>
+                        <div class="sponsor-image"><center><img src="assets/sponsors/green.png" class ="green"></center>
+                        </div>
+                </div>
                 
             </div>
         </div>
@@ -88,6 +93,7 @@
                         <div class="sponsor-image"><center><img src="assets/sponsors/slap.jpg"></center>
                         </div>
                 </div>
+
                 
             </div>         
         </div>
