Added SBI, changes to nukkad

--- a/index.html
+++ b/index.html
@@ -5076,7 +5076,9 @@
 						                </div>
 						                <div id="nukkadmenu2" class="tab-pane fade">
 						                    <div class="contact-content">
-						                        Dev (PR Coordinator) - 9654929630<br>
+						                        <!-- Dev (PR Coordinator) - 9654929630<br> -->
+												
+												Rishabh Bansal (PR Coordinator) - 9899786395<br>
 												Vaibhav Chauhan - 9718269992<br>
 						                    </div>
 						                </div>
