--- a/sponsors.html
+++ b/sponsors.html
@@ -95,6 +95,11 @@
         <div class="row">
             <div class="row flex-container">
                 <div class="flex-item">
+                    <div class="sponsor-type"><center>Banking Partner</center></div><br>
+                        <div class="sponsor-image"><center><img src="assets/sponsors/sbi.jpg" class = "green"></center>
+                        </div>
+                </div>
+                <div class="flex-item">
                     <div class="sponsor-type"><center></center></div><br>
                         <div class="sponsor-image"><center><img src="assets/sponsors/red.jpg"></center>
                         </div>
@@ -104,6 +109,7 @@
                         <div class="sponsor-image"><center><img src="assets/sponsors/slap.jpg"></center>
                         </div>
                 </div>
+                
 
                 
             </div>         
