Dance Events Corrected in Mobile website

--- a/MobileWebsite/event/dance/anusthan.html
+++ b/MobileWebsite/event/dance/anusthan.html
@@ -92,8 +92,8 @@
                                 <br>Swords, knives, or any other sharp objects (unless plastic – but must be approved prior to performance)
                                 Fire in any form (candles, torches, etc.) Fog or smoke Helium balloons Special lighting
                                 <br><br>SOLO <br><br>Rules & regulations:
-                                <br><br>ROUND 1: Online Prelims:
-                                <br>PARTICIPANTS ARE SUPPOSED TO SEND A VIDEO OF THEIR PERFORMANCE(MAXIMUM: 6 MINUTES, CLASSICAL/SEMI-CLASSICAL/FOLK) TO nrityangana.dtu@gmail.com LATEST BY 12TH FEBRUARY 2017.
+                                <!-- <br><br>ROUND 1: Online Prelims:
+                                <br>PARTICIPANTS ARE SUPPOSED TO SEND A VIDEO OF THEIR PERFORMANCE(MAXIMUM: 6 MINUTES, CLASSICAL/SEMI-CLASSICAL/FOLK) TO nrityangana.dtu@gmail.com LATEST BY 12TH FEBRUARY 2017. -->
                                 <br>1. All forms of pure Indian classical dance forms are allowed.
                                 <br>2. Semi-classical styles are allowed provided there are distinctive classical elements are identified in the performance, amalgamated with other fusion styles. Contact the event coordinator in case of any queries.
                                 <br><br>3. For folk, teams have to perform one of the following dance forms:
