--- a/MobileWebsite/event/dance/spandhan.html
+++ b/MobileWebsite/event/dance/spandhan.html
@@ -70,7 +70,7 @@
             <div class="container" id="home-body">
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
-                        <center><h3 id="events-heading">Spandhan</h3></center>
+                        <center><h3 id="events-heading">Spandan</h3></center>
                     </div>
                 </div>
 
