--- a/MobileWebsite/event/dance/anusthan.html
+++ b/MobileWebsite/event/dance/anusthan.html
@@ -69,7 +69,7 @@
             <div class="container" id="home-body">
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
-                        <center><h3 id="events-heading">Anushtaan</h3></center>
+                        <center><h3 id="events-heading">Anushthaan</h3></center>
                     </div>
                 </div>
 
@@ -78,36 +78,44 @@
                         <center>
                             <p id="event-desc" class="justify">
                                 Anushthaan, organized by Nrityangana, The Classical Dance Society of DTU, truly depicts the glorified culture and traditions of India. With performances ranging from Gujarat's Garba to Punjab’s Bhangra, from the mesmerizing moves of Bharatnatyam to the graceful Kathak, the classical and folk dance competition, Anushthaan, has been and will continue to add colours to the Engifest.
-                                <br><br>GROUP <br><br> Rules & regulations:
-                                <br><br>1. For folk, teams have to perform one of the following dance forms:
+                                <br><br><b>GROUP </b><br><br> Rules & regulations:
+                                <br>1. For folk, teams have to perform one of the following dance forms:
                                 <br>Alkap, Bhangra, Bhavai, Bihu, Cheraw (bamboo dance) , Chhau, Dhap, Dumhal, Gambhira, Garba(dandiya), Gaur dance, Ghoomar, Ghumura, Giddha, Gondhal, Jawara ,Jhoomer, Kalbelia, Karakattam, Koli, Lavani, Naga dance, Odissi, Padhar, Raas.
                                 <br>If team wants to perform a form other than those mentioned above, they are required to contact the coordinators well in advance.
                                 <br><br>2. All forms of pure Indian classical dance forms are allowed.
-                                <br>3. Semi-classical styles are allowed provided there are distinctive classical elements are identified in the performance, amalgamated with other fusion styles. Contact the event coordinator in case of any queries.
-                                <br>4. The teams must bring CDs/ Pen-drive for the music (audio format)
-                                <br>5. Time Limit: Minimum: 7 minutes Maximum: 10 minutes. (One minute will be allowed in addition to maximum time for setup and strike of props)
-                                <br>6. Team size: Minimum: 6 Maximum: 15
-                                <br>7. Judging Criteria:Choreography, Synchronization, Expression, Creativity, Prop Usage, Costume, Energy, Stage coverage, and overall impact.
+                                <br><br>3. Semi-classical styles are allowed provided there are distinctive classical elements are identified in the performance, amalgamated with other fusion styles. Contact the event coordinator in case of any queries.
+                                <br><br>4. The teams must bring CDs/ Pen-drive for the music (audio format)
+                                <br><br>5. Time Limit: 
+                                <br>Minimum: 7 minutes 
+                                <br>Maximum: 10 minutes. 
+                                <br>(One minute will be allowed in addition to maximum time for setup and strike of props)
+                                <br><br>6. Team size: 
+                                <br>Minimum: 6 
+                                <br>Maximum: 15
+                                <br><br>7. Judging Criteria:Choreography, Synchronization, Expression, Creativity, Prop Usage, Costume, Energy, Stage coverage, and overall impact.
                                 <br><br>8. All props are allowed except for the following:
                                 <br>Swords, knives, or any other sharp objects (unless plastic – but must be approved prior to performance)
                                 Fire in any form (candles, torches, etc.) Fog or smoke Helium balloons Special lighting
-                                <br><br>SOLO <br><br>Rules & regulations:
-                                <!-- <br><br>ROUND 1: Online Prelims:
-                                <br>PARTICIPANTS ARE SUPPOSED TO SEND A VIDEO OF THEIR PERFORMANCE(MAXIMUM: 6 MINUTES, CLASSICAL/SEMI-CLASSICAL/FOLK) TO nrityangana.dtu@gmail.com LATEST BY 12TH FEBRUARY 2017. -->
+                                <br><br><b>SOLO</b> 
+                                <br><br>One On One Face Off Battle:
+                                <br>Contestants will battle against a fellow contestant (face off) on the song chosen by the organisers. The participants shall perform their selected classical / semi-classical / folk dance style on songs that may not be of the same genre.
+                                <br><br>Rules & regulations:
                                 <br>1. All forms of pure Indian classical dance forms are allowed.
-                                <br>2. Semi-classical styles are allowed provided there are distinctive classical elements are identified in the performance, amalgamated with other fusion styles. Contact the event coordinator in case of any queries.
+                                <br><br>2. Semi-classical styles are allowed provided there are distinctive classical elements are identified in the performance, amalgamated with other fusion styles. Contact the event coordinator in case of any queries.
                                 <br><br>3. For folk, teams have to perform one of the following dance forms:
                                 <br>Alkap, Bhangra, Bhavai, Bihu, Cheraw (bamboo dance) , Chhau, Dhap, Dumhal, Gambhira,Garba (dandiya), Gaur dance, Ghoomar, Ghumura, Giddha, Gondhal, Jawara ,Jhoomer, Kalbelia, Karakattam, Koli, Lavani, Naga dance, Odissi, Padhar, Raas.
                                 <br>If a participant wants to perform a form other than those mentioned above, they are required to contact the coordinators well in advance.
-                                <br><br>4. Time Limit(Online Prelims): Minimum: 4 minutes Maximum: 7 minutes. (One minute will be allowed in addition to maximum time for setup and strike of props)
-                                <br>5. Judging Criteria:
+                                <br><br>4. Time Limit: 
+                                <br>Minimum: 4 minutes 
+                                <br>Maximum: 7 minutes. 
+                                <br>(One minute will be allowed in addition to maximum time for setup and strike of props)
+                                <br><br>5. Judging Criteria:
                                 Choreography, Synchronization, Expression, Creativity, Prop Usage, Costume, Energy, Stage coverage, and overall impact.
                                 <br>All props are allowed except for the following:
                                 Swords, knives, or any other sharp objects (unless plastic – but must be approved prior to performance)
                                 Fire in any form (candles, torches, etc. Fog or smoke
                                 Helium balloons Special lighting
-                                <br><br>ROUND 2: <br>ONE ON ONE FACE OFF BATTLE
-                                <br>THE SELECTED CONTESTANTS WILL MOVE FORWARD TO ROUND TWO, IN WHICH THEY WILL BATTLE AGAINST A FELLOW CONTESTANT(FACE OFF) ON THE SONG CHOSEN BY THE ORGANISERS. THE PARTICIPANTS SHALL PERFORM THEIR SELECTED CLASSICAL/SEMI-CLASSICAL/FOLK DANC STYLE ON SONGS THAT MAY NOT BE OF THE SAME GENRE.
+                                
                                 <br><br>**In case of conflicts, decision of the judges would be considered final and binding**
                             </p>
                             <p id="event-desc" class="left">
