--- a/index.html
+++ b/index.html
@@ -4263,17 +4263,15 @@
 						                </div>
 						                <div id="anushthaanmenu1" class="tab-pane fade">
 						                    <div class="rule-content">
-						        	
-						                       	ROUND 1: Online Prelims:<br>
-
-												PARTICIPANTS(SOLO/DUET) ARE SUPPOSED TO SEND A VIDEO OF THEIR PERFORMANCE(MAXIMUM: 6 MINUTES,  CLASSICAL/SEMI-CLASSICAL/FOLK) TO  nrityangana.dtu@gmail.com LATEST BY 12TH FEBRUARY 2017.<br>
-
-												1.  All forms of pure Indian classical dance forms are allowed.<br>
+						        				<b>One On One Face Off Battle:</b>
+                                				Contestants will battle against a fellow contestant (face off) on the song chosen by the organisers. The participants shall perform their selected classical / semi-classical / folk dance style on songs that may not be of the same genre.
+                                				<br><br><b>Rules:</b>
+						                       	1.  All forms of pure Indian classical dance forms are allowed.<br>
 												2.  We allow semiclassical styles provided there are distinctive classical elements are identified in the performance, amalgamated with other fusion styles. Contact the event coordinator in case of any queries.<br>
 												3.  For folk, participants have to perform one of the following dance forms: <br>
 												Alkap, Bhangra, Bhavai, Bihu, Cheraw (bamboo dance) , Chhau, Dhap, Dumhal, Gambhira,Garba (dandiya), Gaur dance, Ghoomar, Ghumura, Giddha, Gondhal, Jawara ,Jhoomer, Kalbelia, Karakattam, Koli, Lavani, Naga dance, Odissi, Padhar, Raas.<br>
 												If participant wants to perform a form other than those mentioned above, they are required to contact the coordinators well in advance.<br>
-												4.  Time Limit(Online prelims): <br>
+												4.  Time Limit: <br>
 												Minimum : 4 minutes <br>
 												Maximum : 6 minutes.<br>
 
@@ -4289,10 +4287,6 @@
 												              Special lighting<br>
 
 												<br>
-												<b>ROUND 2: ONE ON ONE FACE OFF BATTLE</b>
-
-												<b>THE SELECTED CONTESTANTS WILL MOVE FORWARD TO ROUND TWO, IN WHICH THEY WILL BATTLE AGAINST A FELLOW CONTESTANT(FACE OFF) ON THE SONG CHOSEN BY THE ORGANISERS. THE PARTICIPANTS SHALL PERFORM THEIR SELECTED CLASSICAL/SEMI-CLASSICAL/FOLK DANC STYLE ON SONGS THAT MAY NOT BE OF THE SAME GENRE.</b> <br>
-
 
 												<b>**In case of conflicts, decision of the judges would be considered final and binding**</b>
 
@@ -4300,7 +4294,7 @@
 						                </div>
 						                <div id="anushthaanmenu2" class="tab-pane fade">
 						                    <div class="rule-content">
-						                      
+						                      	<b>Rules:</b>
 						                        1.   For folk, Teams have to perform one of the following dance forms: <br>
 												Alkap, Bhangra, Bhavai, Bihu, Cheraw (bamboo dance) , Chhau, Dhap, Dumhal, Gambhira,Garba (dandiya), Gaur dance, Ghoomar, Ghumura, Giddha, Gondhal, Jawara ,Jhoomer, Kalbelia, Karakattam, Koli, Lavani, Naga dance, Odissi, Padhar, Raas. <br>
 												If team wants to perform a form other than those mentioned above, they are required to contact the coordinators well in advance. <br>
