shakedown date corrected

--- a/index.html
+++ b/index.html
@@ -3332,8 +3332,8 @@
 												Presented by Souls of Speed, Shakedown is one-of-a-kind roadshow- a spectacle which would leave you enticed. Jaws will drop and eyes will widen, as daredevil stunts are pulled off with ease and style!
 						                        </div>
 						                        <div class="info-col">
-						                            <b>Date: </b>18 Feb<br>
-						                            <b>Time: </b>12:00 pm<br>
+						                            <b>Date: </b>19 Feb<br>
+						                            <b>Time: </b>9:00 am<br>
 						                            <b>Venue: </b>Hostel Road<br>
 						                        </div>
 						                        <div class="info-col"></div>
