--- a/MobileWebsite/event/misc_event/shakedown.html
+++ b/MobileWebsite/event/misc_event/shakedown.html
@@ -82,8 +82,8 @@
                             </p>
                             <p id="event-desc" class="left">
                                 <br>Contact : Aseem Bansal - 9582920037<br>
-                                <br><br>Date: 18 Feb
-                                <br>Time: 12:00 pm
+                                <br><br>Date: 19 Feb
+                                <br>Time: 9:00 am
                                 <br>Venue: Hostel Road
                             </p>
                             <ul class="event-list">
