Shaam, Sama aur Shayar event added

--- a/MobileWebsite/event/misc.html
+++ b/MobileWebsite/event/misc.html
@@ -91,7 +91,7 @@
                                     <a href="misc_event/arte.html">Arte Fotographia</a>
                                 </li>
                                 <li> 
-                                    <a href="misc_event/kavisam.html">Kavi Sammelan</a>
+                                    <a href="misc_event/kavisam.html">Shaam, Sama aur Shayar</a>
                                 </li>
                                 
                                 <li id="last-list-item"> 
