--- a/MobileWebsite/event/misc_event/kavisam.html
+++ b/MobileWebsite/event/misc_event/kavisam.html
@@ -69,7 +69,7 @@
             <div class="container" id="home-body">
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
-                        <center><h3 id="events-heading">Kavi Sammelan</h3></center>
+                        <center><h3 id="events-heading">Shaam, Sama aur Shayar</h3></center>
                     </div>
                 </div>
 
@@ -77,15 +77,16 @@
                     <div class="col-xs-8 col-xs-offset-2">
                         <center>
                             <p id="event-desc" class="justify">
-                                "Too many people in the modern world view poetry as a luxury, not a necessity like petrol. But to me it's the oil of life."
-                                Engifest Infinity presents Kavi Sammelan, an evening of wonder and beauty, enhanced by the magic that can only be created by the trappings of emotions within words.
-                                <br>The event holds precedent in the form of a memorable evening during Engifest 2016, where renowned poet Kumar Vishwas turned out to charm the enormous crowds with his witticisms.
-                                <br>The event was well attended, with all the faculty members of DTU and hundreds of students in attendance to watch the man speak.
-                                <br>This year too, the promises of sweet sorrows and magical moments are abound.
+                                "इंसान खुद की नज़र में सही होना चाहिए, दुनिया तो भगवान से भी दुखी है।"
+                                <br>Maqbool. Gangs of Wasseypur. Pink. Tamasha.
+                                The stellar soundtrack of Gulaal, and the evergreen, award-winning number "Aarambh Hai Prachanda".
+                                <br>The genius that produced them all and made them shine amongst everything else, is all set to illuminate your hearts and minds this EngiFest.
+                                <br><b>Piyush Mishra</b>, one of NSD's most eminent luminaries shall be here at EngiFest Infinity, on the 20th of February, 4pm onwards.
+                                <br>The OAT shall shine in the glory of his sharp wit and intellectual panache. Be there.
                             </p>
                             <p id="event-desc" class="left">
                                 <!-- <br><br>Contact : Vineet - 9810383175<br> -->
-                                <br><br><br>Date: 19 Feb
+                                <br><br><br>Date: 20 Feb
                                 <br>Time: 4:00 pm
                                 <br>Venue: OAT
                             </p>
