--- a/index.html
+++ b/index.html
@@ -3265,7 +3265,7 @@
 	                            <li><a data-toggle="tab" href="#shakedown" class="event-list float-nav">Shakedown</a></li>
 	                            <li><a data-toggle="tab" href="#kaleidoscope" class="event-list float-nav">Kaleidoscope</a></li>
 	                            <li><a data-toggle="tab" href="#arte-fotographia" class="event-list float-nav">Arte Fotographia</a></li>
-	                            <li><a data-toggle="tab" href="#kavi-sammelan" class="event-list float-nav">Kavi Sammelan</a></li>                            
+	                            <li><a data-toggle="tab" href="#kavi-sammelan" class="event-list float-nav">Shaam, Sama aur Shayar</a></li>                            
 	                        </ul>
 	                    </div>
 	                    <div class="col-xs-9">
@@ -3462,16 +3462,16 @@
 						                <div id="kavi-sammelanhome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                        	"Too many people in the modern world view poetry as a luxury, not a necessity like petrol. But to me it's the oil of life."<br>
-
-													Engifest Infinity presents Kavi Sammelan, an evening of wonder and beauty, enhanced by the magic that can only be created by the trappings of emotions within words.
-													The event holds precedent in the form of a memorable evening during Engifest 2016, where renowned poet Kumar Vishwas turned out to charm the enormous crowds with his witticisms.
-													The event was well attended, with all the faculty members of DTU and hundreds of students in attendance to watch the man speak.
-													This year too, the promises of sweet sorrows and magical moments are abound.
+						                        	"इंसान खुद की नज़र में सही होना चाहिए, दुनिया तो भगवान से भी दुखी है।"
+					                                <br>Maqbool. Gangs of Wasseypur. Pink. Tamasha.
+					                                The stellar soundtrack of Gulaal, and the evergreen, award-winning number "Aarambh Hai Prachanda".
+					                                <br>The genius that produced them all and made them shine amongst everything else, is all set to illuminate your hearts and minds this EngiFest.
+					                                <br><b>Piyush Mishra</b>, one of NSD's most eminent luminaries shall be here at EngiFest Infinity, on the 20th of February, 4pm onwards.
+                                					<br>The OAT shall shine in the glory of his sharp wit and intellectual panache. Be there.
 													
 						                        </div>
 						                        <div class="info-row">
-						                            <b>Date: </b>19 Feb<br>
+						                            <b>Date: </b>20 Feb<br>
 						                            <b>Time: </b>4:00 pm<br>
 						                            <b>Venue: </b>OAT<br>
 						                           
