--- a/sponsors.html
+++ b/sponsors.html
@@ -110,7 +110,11 @@
                         </div>
                 </div>
                 
-
+                <div class="flex-item">
+                    <div class="sponsor-type"><center></center></div><br>
+                        <div class="sponsor-image"><center><a href="https://oneloyalcard.com/"><img src="assets/sponsors/olc.png"></a></center>
+                        </div>
+                </div>
                 
             </div>         
         </div>
