Added Informal Events

--- a/MobileWebsite/event/informal.html
+++ b/MobileWebsite/event/informal.html
@@ -89,6 +89,21 @@
                                 <li> 
                                     <a href="informal_events/sufi.html">Sufi Night</a>
                                 </li>
+                                <li> 
+                                    <a href="informal_events/zorbing.html">Zorbing</a>
+                                </li>
+                                <li> 
+                                    <a href="informal_events/segway.html">Segway</a>
+                                </li>
+                                <li> 
+                                    <a href="informal_events/paintball.html">Paintball</a>
+                                </li>
+                                <li> 
+                                    <a href="informal_events/cricket.html">Cricket Simulation</a>
+                                </li>
+                                <li> 
+                                    <a href="informal_events/vr.html">VR Theater</a>
+                                </li>
                                 <li id="last-list-item"> 
                                     <a href="../events.html">Back to Events</a>
                                 </li>
