Acoustic alchemy spelling corrected mobile website

--- a/MobileWebsite/event/music/alchemy.html
+++ b/MobileWebsite/event/music/alchemy.html
@@ -69,7 +69,7 @@
             <div class="container" id="home-body">
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
-                        <center><h3 id="events-heading">Acoutic Alchemy</h3></center>
+                        <center><h3 id="events-heading">Acoustic Alchemy</h3></center>
                     </div>
                 </div>
 
