--- a/MobileWebsite/event/pro_night/edm.html
+++ b/MobileWebsite/event/pro_night/edm.html
@@ -58,6 +58,7 @@
             <ul>
                 <li><a href="../../index.html" class="active">HOME</a></li>
                 <li><a href="../../register.html">Registration</a></li>
+                <li><a href="../pronight.html">Pro Night</a></li>
                 <li><a href="../../events.html">Events</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
@@ -78,6 +79,7 @@
                     <div class="col-xs-8 col-xs-offset-2">
                         <center>
                             <p id="event-desc" class="justify">
+                            <img class="img-responsive" style="width: 100%" src="../../img/nucleya.jpg">
                             Akkad Bakkad Bambe Bo.
                             <br>Engi main dekho aa gaya woh.
                             <br>Aaja thoda Chennai Bass bajva de. 
