--- a/MobileWebsite/event/pronight.html
+++ b/MobileWebsite/event/pronight.html
@@ -58,6 +58,7 @@
             <ul>
                 <li><a href="../index.html" class="active">HOME</a></li>
                 <li><a href="../register.html">Registration</a></li>
+                <li><a href="pronight.html">Pro Night</a></li>
                 <li><a href="../events.html">Events</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
@@ -79,13 +80,13 @@
                         <center>
                             <ul class="event-list">
                                 <li> 
-                                    <a href="pro_night/livewire.html">Live Wire</a>
+                                    <a href="pro_night/livewire.html">Sunidhi Chauhan (Live Wire)</a>
                                 </li>
                                 <li> 
-                                    <a href="pro_night/edm.html">EDM Night</a>
+                                    <a href="pro_night/edm.html">Nucleya (EDM Night)</a>
                                 </li>
                                 <li> 
-                                    <a href="pro_night/rock.html">Rock Night</a> 
+                                    <a href="pro_night/rock.html">Lagori (Rock Night)</a> 
                                 </li>
                                 <li id="last-list-item"> 
                                     <a href="../events.html">Back to Events</a>
