--- a/MobileWebsite/register.html
+++ b/MobileWebsite/register.html
@@ -54,8 +54,9 @@
 
 		<nav class="slide">
 			<ul>
-				<li><a href="index.html" class="active">HOME</a></li>
-				<li><a href="register.html">Registration</a></li>
+        <li><a href="index.html" class="active">HOME</a></li>
+        <li><a href="register.html">Registration</a></li>
+        <li><a href="event/pronight.html">Pro Night</a></li>
 				<li><a href="events.html">Events</a></li>
 				<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
 				<!-- <li><a href="#">Sponsors</a></li> -->
