br added in edm night

--- a/MobileWebsite/event/pro_night/edm.html
+++ b/MobileWebsite/event/pro_night/edm.html
@@ -80,7 +80,7 @@
                         <center>
                             <p id="event-desc" class="justify">
                             <img class="img-responsive" style="width: 100%" src="../../img/nucleya.jpg">
-                            Akkad Bakkad Bambe Bo.
+                            <br>Akkad Bakkad Bambe Bo.
                             <br>Engi main dekho aa gaya woh.
                             <br>Aaja thoda Chennai Bass bajva de. 
                             <br>Bass Rani  ke saath Raja Baja bhi bulva de.
