live wire updated on main website

--- a/MobileWebsite/event/pro_night/livewire.html
+++ b/MobileWebsite/event/pro_night/livewire.html
@@ -81,7 +81,7 @@
                             <img class="img-responsive" style="width: 100%" src="../../img/sunidhi.jpg">
                             <br><br>All the 'disco deewane', 'aaja nachle' to the beats of the queen of hearts. Master in the art of enchantment, spreading magic through her husky, lilting voice; she will mesmerize you and she will make sure you dance till you drop!
 
-                            <br><br><br>So to all music ballads out there, ab 'Ainvayi Ainvayi' lut jaane ke lie tyaar hojao because the 'Desi Girl' is here at DTU. Kashmir se lekar Kanyakumari tak jiski awwaz ne sabko moh lia, yeh wahi hai jisne sabka 'Ishq Sufiyana' kardia hai aur sabko 'Crazy Kiya Re'.
+                            <br><br>So to all music ballads out there, ab 'Ainvayi Ainvayi' lut jaane ke lie tyaar hojao because the 'Desi Girl' is here at DTU. Kashmir se lekar Kanyakumari tak jiski awwaz ne sabko moh lia, yeh wahi hai jisne sabka 'Ishq Sufiyana' kardia hai aur sabko 'Crazy Kiya Re'.
 
                             <br><br>Get ready to fall in endless love as you groove and sway to the voice of SUNIDHI CHAUHAN at Live Wire at EngiFest Infinity!
                             <br><br>Be there on 18th February, 7pm at DTU! Dance pe chance maar le!
