--- a/index.html
+++ b/index.html
@@ -4844,16 +4844,14 @@
 						                <div id="livewirehome" class="tab-pane fade in active">
 						                    <div class="info-content">
 						                        <div class="info-row">
-						                            Your feet won't touch the ground<br>
-													Your head won't stay still <br>
-													Your hands won't stop swaying<br>
-													Your vocal chords won't stop roaring<br> 
-													Your body won't stop moving <br>
-													All this and more!<br><br>
+						                            All the 'disco deewane', 'aaja nachle' to the beats of the queen of hearts. Master in the art of enchantment, spreading magic through her husky, lilting voice; she will mesmerize you and she will make sure you dance till you drop!
 
-													Get ready to be enthralled at Live Wire-The Star Night as the energy of a popular artist reverberates in the crowd.<br><br>
+						                            <br><br>So to all music ballads out there, ab 'Ainvayi Ainvayi' lut jaane ke lie tyaar hojao because the 'Desi Girl' is here at DTU. Kashmir se lekar Kanyakumari tak jiski awwaz ne sabko moh lia, yeh wahi hai jisne sabka 'Ishq Sufiyana' kardia hai aur sabko 'Crazy Kiya Re'.
 
-													Having featured stars like Vishal and Shekhar and Mohit Chauhan in the previous years, Live Wire at Engifest Infinity will surely be a night of making of infinite college memories!
+						                            <br><br>Get ready to fall in endless love as you groove and sway to the voice of <b>SUNIDHI CHAUHAN</b> at Live Wire at EngiFest Infinity!
+						                            <br><br>Be there on 18th February, 7pm at DTU! Dance pe chance maar le!
+
+						                            <br><br>Having featured stars like Vishal and Shekhar and Mohit Chauhan in the previous years, Live Wire at Engifest Infinity will surely be a night of making of infinite college memories!
 						                        </div>
 						                        <div class="info-col">
 						                            <b>Date: </b>18 Feb<br>
