upadte kaleidoscope in main website

--- a/index.html
+++ b/index.html
@@ -3373,7 +3373,7 @@
 						                    <div class="rule-content">
 						                        Team size: At most 15 (including the actors)<br><br>
 						                        Time Limit: Upto 15 minutes<br><br>
-						                        Theme: To Be Announced <br><br>
+						                        Theme: Open <br><br>
 						                        Judging Criteria: Editing, Cinematography, Script, Acting, Sound design and Overall impact.<br><br>
 						                        Rules: <br>
 						                        1. The movies should be either in Hindi or English or both.<br>
