Update kaleidoscope.html in mobile

--- a/MobileWebsite/event/misc_event/kaleidoscope.html
+++ b/MobileWebsite/event/misc_event/kaleidoscope.html
@@ -84,7 +84,7 @@
 
                                 2. <b> Limit:</b> Upto 15 minutes<br><br>
 
-                                3. <b>Theme:</b> To Be Announced(One month before Engifest ’17)<br><br>
+                                3. <b>Theme:</b> Open<br><br>
 
                                 4. <b>Judging Criteria:</b><br>
 
