--- a/MobileWebsite/event/pro_night/shtuby.html
+++ b/MobileWebsite/event/pro_night/shtuby.html
@@ -3,28 +3,28 @@
 <head> 
 
     <title>Engifest'17</title>  
-    <link rel="shortcut icon" type="image/x-icon" href="../img/engi-small.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../img/engi-small.ico" />
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1">
+    <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1" media="(device-height: 568px)">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="True">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <!-- Style Sheets --> 
-    <link rel="stylesheet" type="text/css" media="all" href="../css/reset.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="../css/trunk.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="../css/body_elements.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="../css/twinkling_star.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/reset.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/trunk.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/body_elements.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="../../css/twinkling_star.css" />
 
     <!-- Scripts --> 
     <script type="text/javascript">
         if (typeof jQuery == 'undefined')
-            document.write(unescape("%3Cscript src='../js/jquery-1.9.js'" + "type='text/javascript'%3E%3C/script%3E"))
+            document.write(unescape("%3Cscript src='../../js/jquery-1.9.js'" + "type='text/javascript'%3E%3C/script%3E"))
     </script>
 
-    <script type="text/javascript" language="javascript" src="../js/trunk.js"></script>
+    <script type="text/javascript" language="javascript" src="../../js/trunk.js"></script>
 
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
@@ -56,13 +56,13 @@
 
         <nav class="slide">
             <ul>
-                <li><a href="../index.html" class="active">HOME</a></li>
-                <li><a href="../register.html">Registration</a></li>
-                <li><a href="pronight.html">Pro Night</a></li>
-                <li><a href="../events.html">Events</a></li>
+                <li><a href="../../index.html" class="active">HOME</a></li>
+                <li><a href="../../register.html">Registration</a></li>
+                <li><a href="../pronight.html">Pro Night</a></li>
+                <li><a href="../../events.html">Events</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
-                <li><a href="../contact.html">Contact Us</a></li>
+                <li><a href="../../contact.html">Contact Us</a></li>
                 <!-- <li><a href="#">LINK SEVEN</a></li> -->
             </ul>
         </nav>
@@ -70,29 +70,29 @@
         <div class="content slide" >        <!-- Add "slideRight" class to items that move right when viewing Nav Drawer   -->
             <div class="container" id="home-body">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <center><h3 id="events-heading">Pro Night</h3></center>
+                    <div class="col-xs-8 col-xs-offset-2">
+                        <center><h3 id="events-heading">Shtuby - Drum &amp; Red</h3></center>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <center>
+                            <p id="event-desc" class="justify">
+                            <img class="img-responsive" style="width: 100%" src="../../img/shtuby.jpg">
+                            <br>With a great passion for electronic music, they come all the way from ISRAEL. In association with The Embassy of Israel, to celebrate 25 years of diplomacy between India and Israel, we proudly bring to you, SHTUBY - Drum and Red.<br>
+
+                            The perfect combination of energy,madness and music ,sure to take over your body and soul. Get ready to witness the wildest concert ever and dance to the hypnotizing music like a maniac on 18th of February, 5pm onwards at Delhi Technological University!<br>
+                            </p>
+                            <p id="event-desc" class="left">
+                                Date: 18 Feb
+                                <br>Time: 5:00 pm
+                                <br>Venue: OAT
+                            </p>
+                            <!-- <a href="https://goo.gl/forms/3vyaN0YukfkJOVim1" class="myButton">Register</a> -->
                             <ul class="event-list">
-                                <li> 
-                                    <a href="pro_night/livewire.html">Sunidhi Chauhan (Live Wire)</a>
-                                </li>
-                                <li> 
-                                    <a href="pro_night/edm.html">Nucleya (EDM Night)</a>
-                                </li>
-                                <li> 
-                                    <a href="pro_night/rock.html">Lagori (Rock Night)</a> 
-                                </li>
-                                <li> 
-                                    <a href="pro_night/shtuby.html">Shtuby - Drum &amp; Red</a> 
-                                </li>
                                 <li id="last-list-item"> 
-                                    <a href="../events.html">Back to Events</a>
+                                    <a href="../pronight.html">Back to Pro Night Events</a>
                                 </li>
                             </ul>
                         </center>
