--- a/index.html
+++ b/index.html
@@ -4828,7 +4828,10 @@
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
 	                    		<li class="active"><a data-toggle="tab" href="#livewire" class="event-list float-nav">Livewire</a></li>
 	                    		<li><a data-toggle="tab" href="#edm-night" class="event-list float-nav">EDM Night</a></li>	
-	                            <li><a data-toggle="tab" href="#rock-night" class="event-list float-nav">Rock Night</a></li>                                                        
+	                            <li><a data-toggle="tab" href="#rock-night" class="event-list float-nav">Rock Night</a></li>
+	                            <li><a data-toggle="tab" href="#shtuby" class="event-list float-nav">Shtuby - Drum &amp; Red</a></li>
+	                                                                                   
+
 	                        </ul>
 	                    </div>
 	                    <div class="col-xs-9">
@@ -4918,6 +4921,29 @@
 						                            <b>Time: </b>7:00 pm<br>
 						                            <b>Venue: </b>Sports Complex<br>
 						                        </div>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+						        <div id="shtuby" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#shtubyhome">Info</a></li>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="shtubyhome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">
+						                        	With a great passion for electronic music, they come all the way from ISRAEL. In association with The Embassy of Israel, to celebrate 25 years of diplomacy between India and Israel, we proudly bring to you, SHTUBY -Drum and Red.<br>
+
+													The perfect combination of energy,madness and music ,sure to take over your body and soul. Get ready to witness the wildest concert ever and dance to the hypnotizing music like a maniac at Delhi Technological University!<br>
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>18 Feb<br>
+						                            <b>Time: </b>5:00 pm<br>
+						                            <b>Venue: </b>OAT<br>
+						                        </div>
+						                        <div class="info-col"></div>
 						                    </div>
 						                </div>
 						            </div>
