--- a/index.html
+++ b/index.html
@@ -4848,7 +4848,7 @@
 
 						                            <br><br>So to all music ballads out there, ab 'Ainvayi Ainvayi' lut jaane ke lie tyaar hojao because the 'Desi Girl' is here at DTU. Kashmir se lekar Kanyakumari tak jiski awwaz ne sabko moh lia, yeh wahi hai jisne sabka 'Ishq Sufiyana' kardia hai aur sabko 'Crazy Kiya Re'.
 
-						                            <br><br>Get ready to fall in endless love as you groove and sway to the voice of <b>SUNIDHI CHAUHAN</b> at Live Wire at EngiFest Infinity!
+						                            <br><br>Get ready to fall in endless love as you groove and sway to the voice of <b>SUNIDHI CHAUHAN</b>f at Live Wire at EngiFest Infinity!
 						                            <br><br>Be there on 18th February, 7pm at DTU! Dance pe chance maar le!
 
 						                            <br><br>Having featured stars like Vishal and Shekhar and Mohit Chauhan in the previous years, Live Wire at Engifest Infinity will surely be a night of making of infinite college memories!
