--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		<div id="Menu" class="row" style="z-index: 200;">
 			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1 lowermenusound cursor-hand">Home</div>
 			<div id="events" class="col-xs-2 align-center  floath2 lowermenusound cursor-hand">Events</div>
-			<div id="pro-night" class="col-xs-2 align-center floath3 lowermenusound cursor-hand">Pro Nights</div>
+			<div id="pro-night" class="col-xs-2 align-center floath3 lowermenusound cursor-hand">Pro Shows</div>
 			<!-- <div id="contact" class="col-xs-2 align-center floath4">Contact</div> -->
 			<div id="registration" class="col-xs-2 align-center floath5 lowermenusound cursor-hand">Registration</div>
 		</div>
@@ -432,15 +432,20 @@
 	                    </div>
                 </div>
                 <div class="row contactRow">
-                        <div class = "col-xs-3 col-xs-offset-2"> 
+                        <div class = "col-xs-3 col-xs-offset-1"> 
 	                    	<div class="name">Debadri Das</div>
 	                        <div class="designation">Head, Hospitality</div>
 	                        <div class="contact">+91-9811353121</div>
 	                    </div>
-	                    <div class = "col-xs-3 col-xs-offset-2"> 
+	                    <div class = "col-xs-2 col-xs-offset-1"> 
 	                    	<div class="name">Vipin Khandelwal</div>
 	                        <div class="designation">Head, Hospitality</div>
 	                        <div class="contact">+91-9971719969</div>
+	                    </div>
+	                    <div class = "col-xs-3 col-xs-offset-1"> 
+	                    	<div class="name">Vardhan Raghuvanshi</div>
+	                        <div class="designation">Head, Hospitality</div>
+	                        <div class="contact">+91-7838982116</div>
 	                    </div>
                 </div>
 
@@ -3641,7 +3646,7 @@
 						                        <br><br>
 												REGISTRATION:
 												<br>
-												Participants can register both online and offline (on the spot).<br>
+												Registration has to be done ONLINE ONLY. There will be NO on the spot registration.<br>
 
 												Please note: Only one person from a group should register.
 						                        </div>
@@ -3695,7 +3700,7 @@
 						                        <div class="info-row">Music is well said to be the speech of angels. If yours is the team that can create a heaven with your voices, get ready with your bandish, and take the stage at Vrind!<br><br>
 												REGISTRATION:<br>
 
-												Participants can register both online and offline (on the spot).<br>
+												Registration has to be done ONLINE ONLY. There will be NO on the spot registration.<br><br>
 												Please note: Only one person from a group should register.
 						                        </div>
 						                        <div class="info-col">
@@ -3763,7 +3768,7 @@
 
 													REGISTRATION:<br>
 
-													Participants can register both online and offline (on the spot).<br>
+													Registration has to be done ONLINE ONLY. There will be NO on the spot registration.<br><br>
 
 													Please note: Only one person from the pair should register.
 						                        </div>
@@ -4813,14 +4818,14 @@
 			<!-- Satellite  5 -->
 			<div id="satellite-div-5">
 				<img id="satellite-5" class="float-satellite5" src="assets/images/Satellite-icon1.png"/>
-				<p id="satellite-p-5" class="style-p">PRO NIGHTS</p>
+				<p id="satellite-p-5" class="style-p">PRO SHOWS</p>
 			</div>
 			<div id="satellite-modal-5" class="modal">
 			  <!-- Modal content -->
 			  <div class="modal-content">
 			    <div class="modal-header">
 			      <span class="close" id="spanModalSatellite5">&times;</span>
-			      <center><p>PRO NIGHTS</p></center>
+			      <center><p>PRO SHOWS</p></center>
 			    </div>
 			    <div class="modal-body modal-footer">
 			      <div class="row">
