Photography Team Added

--- a/team.html
+++ b/team.html
@@ -540,7 +540,7 @@
         <!-- Foodcity Coordinator - Security - Mobile -->
         <br><br>
         <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-3">
                 <div class="flex-header">
                     <center> Foodcity Coordinators </center>
                 </div>
@@ -571,7 +571,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-4">
                 <div class="flex-header">
                     <center> Mobile App</center>
                 </div>
@@ -591,6 +591,24 @@
                         <div class="name">Mohit Kumar</div>
                         <div class="designation">Head</div>
                     </div>
+                </div>
+            </div>
+            <div class="col-xs-3">
+                <div class="flex-header">
+                    <center> Photography</center>
+                </div>
+                <div class="row flex-container">
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Ayush Goel.jpg"></div> 
+                        <div class="name">Ayush Goel</div>
+                        <div class="designation">Head</div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Hamaad Zuberi.jpg"></div> 
+                        <div class="name">Hamaad Zuberi</div>
+                        <div class="designation">Head</div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
