online registration do re mi pa events in mobile

--- a/MobileWebsite/event/music/balladeer.html
+++ b/MobileWebsite/event/music/balladeer.html
@@ -80,7 +80,7 @@
                             <p id="event-desc" class="justify">
                                 Music is, certainly, the strongest form of magic- one that transcends all boundaries. So gather up your best wizards and bewitch the audience with your symphonies! Cast your spell at Balladeers!
                                 <br><br>REGISTRATION:
-                                <br>Participants can register both online and offline (on the spot).
+                                <br>Registration has to be done ONLINE ONLY. There will be NO on the spot registration.
                                 <br>Please note: <br>Only one person from a group should register.
                                 <br><br>RULES:
                                 <br>1. Each group is allotted a total of 12 minutes including sound check.
