--- a/MobileWebsite/event/music/show.html
+++ b/MobileWebsite/event/music/show.html
@@ -82,7 +82,7 @@
                                 The most beautiful things in the world cannot be seen or touched, they are felt with the heart.
                                 <br>If you’re the pair whose melodies can resonate in the hearts of the masses, give it what you’ve got at Two’s a Show!
                                 <br><br>REGISTRATION:
-                                <br>Participants can register both online and offline (on the spot).
+                                <br>Registration has to be done ONLINE ONLY. There will be NO on the spot registration.
                                 <br>Please note: <br>Only one person from the pair should register.
                                 <br><br>RULES:
                                 <br>1. Each pair is allotted a total of 7 minutes including setup.
