--- a/index.html
+++ b/index.html
@@ -3593,7 +3593,7 @@
 						                    <div class="info-content">
 						                        <div class="info-row">If music is your language, and the stage is your world, then grab the microphone and
 													get ready to enchant everyone with your vocals. Come, be a part of Vocalicious. The stage awaits you.<br>
-						                            Registration has to be done ONLINE ONLY. There will be NO on the spot registration.<br><br>
+													<br>REGISTRATION: Registration has to be done ONLINE ONLY. There will be NO on the spot registration.<br><br>
 						                            ONLINE PRELIMS:<br> Send your recording (audio/video) or the link to your YouTube video along with your contact details to <a href="mailto:madhurima.western@gmail.com">madhurima.western@gmail.com</a>.
 						                        </div>
 						                        <div class="info-col">
