--- a/MobileWebsite/event/music/vrind.html
+++ b/MobileWebsite/event/music/vrind.html
@@ -81,7 +81,7 @@
                             <p id="event-desc" class="justify">
                                 Music is well said to be the speech of angels. If yours is the team that can create a heaven with your voices, get ready with your bandish, and take the stage at Vrind!
                                 <br><br>REGISTRATION:
-                                <br>Participants can register both online and offline (on the spot).
+                                <br>Registration has to be done ONLINE ONLY. There will be NO on the spot registration.
                                 <br>Please note: <br>Only one person from a group should register.
                                 <br><br>RULES:
                                 <br>1. Each group is allotted a total of 12 minutes including setup.
