--- a/sponsors.html
+++ b/sponsors.html
@@ -191,7 +191,11 @@
                         <div class="sponsor-image"><center><img src="assets/sponsors/ignite.png" class = "green"></center>
                         </div>
                 </div>
-
+                <div class="flex-item">
+                    <div class="sponsor-type"><center></center></div><br>
+                        <div class="sponsor-image"><center><a href="http://dfordelhi.in/"><img src="assets/sponsors/delhi.png" ></a></center>
+                        </div>
+                </div>
                 
                 
             </div>         
