Piyush Mishra added

--- a/index.html
+++ b/index.html
@@ -4835,6 +4835,7 @@
 	                    		<li><a data-toggle="tab" href="#edm-night" class="event-list float-nav">EDM Night</a></li>	
 	                            <li><a data-toggle="tab" href="#rock-night" class="event-list float-nav">Rock Night</a></li>
 	                            <li><a data-toggle="tab" href="#shtuby" class="event-list float-nav">Shtuby - Drum &amp; Red</a></li>
+	                            <li><a data-toggle="tab" href="#piyush" class="event-list float-nav">Shaam Sama aur Shayar</a></li>
 	                                                                                   
 
 	                        </ul>
@@ -4946,6 +4947,31 @@
 						                        <div class="info-col">
 						                            <b>Date: </b>18 Feb<br>
 						                            <b>Time: </b>5:00 pm<br>
+						                            <b>Venue: </b>OAT<br>
+						                        </div>
+						                        <div class="info-col"></div>
+						                    </div>
+						                </div>
+						            </div>
+						        </div>
+						        <div id="piyush" class="tab-pane fade">
+						            <ul class="nav nav-tabs">
+						                <li class="active"><a data-toggle="tab" href="#piyushhome">Info</a></li>
+						            </ul>
+
+						            <div class="tab-content">
+						                <div id="piyushhome" class="tab-pane fade in active">
+						                    <div class="info-content">
+						                        <div class="info-row">
+						                        	"इंसान खुद की नज़र में सही होना चाहिए, दुनिया तो भगवान से भी दुखी है।"<br><br>
+													Maqbool. Gangs of Wasseypur. Pink. Tamasha.<br>
+													The stellar soundtrack of Gulaal, and the evergreen, award-winning number "Aarambh Hai Prachanda".<br>
+													The genius that produced them all and made them shine amongst everything else, is all set to illuminate your hearts and minds this EngiFest.<br>
+													Piyush Mishra, one of NSD's most eminent luminaries shall be here at EngiFest Infinity. The OAT shall shine in the glory of his sharp wit and intellectual panache.<br>
+						                        </div>
+						                        <div class="info-col">
+						                            <b>Date: </b>20 Feb<br>
+						                            <b>Time: </b>4:00 pm<br>
 						                            <b>Venue: </b>OAT<br>
 						                        </div>
 						                        <div class="info-col"></div>
