Pro Night changed to Pro shows in Mobile Website

--- a/MobileWebsite/event/pro_night/rock.html
+++ b/MobileWebsite/event/pro_night/rock.html
@@ -58,7 +58,7 @@
             <ul>
                 <li><a href="../../index.html" class="active">HOME</a></li>
                 <li><a href="../../register.html">Registration</a></li>
-                <li><a href="../pronight.html">Pro Night</a></li>
+                <li><a href="../pronight.html">Pro Shows</a></li>
                 <li><a href="../../events.html">Events</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
@@ -95,7 +95,7 @@
                             <!-- <a href="https://goo.gl/forms/3vyaN0YukfkJOVim1" class="myButton">Register</a> -->
                             <ul class="event-list">
                                 <li id="last-list-item"> 
-                                    <a href="../pronight.html">Back to Pro Night Events</a>
+                                    <a href="../pronight.html">Back to Pro Shows Events</a>
                                 </li>
                             </ul>
                         </center>
