--- a/MobileWebsite/event/pronight.html
+++ b/MobileWebsite/event/pronight.html
@@ -58,7 +58,7 @@
             <ul>
                 <li><a href="../index.html" class="active">HOME</a></li>
                 <li><a href="../register.html">Registration</a></li>
-                <li><a href="pronight.html">Pro Night</a></li>
+                <li><a href="pronight.html">Pro Shows</a></li>
                 <li><a href="../events.html">Events</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfDE9DQu8k-7vUop34rlmCDzLWTV5Xiyb2fmGZpfbPCr3YKKQ/viewform">Accommodations</a></li>
                 <!-- <li><a href="#">Sponsors</a></li> -->
@@ -71,7 +71,7 @@
             <div class="container" id="home-body">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
-                        <center><h3 id="events-heading">Pro Night</h3></center>
+                        <center><h3 id="events-heading">Pro Shows</h3></center>
                     </div>
                 </div>
 
