--- a/MobileWebsite/event/pro_night/rock.html
+++ b/MobileWebsite/event/pro_night/rock.html
@@ -78,6 +78,7 @@
                     <div class="col-xs-8 col-xs-offset-2">
                         <center>
                             <p id="event-desc" class="justify">
+                            <img class="img-responsive" style="width: 100%" src="../../img/lagori.jpg">
                             "One good thing about music, when it hits you, you feel no pain."
                             <br>-Bob Marley
 
