Piyush Mishra moved from misc to pro shows

--- a/MobileWebsite/event/informal_events/poker.html
+++ b/MobileWebsite/event/informal_events/poker.html
@@ -87,7 +87,7 @@
                             <!-- <p id="event-desc" class="left">
                                 Date: 20 Feb
                                 <br>Time: 7:00 pm
-                                <br>Venue: Sports Complex
+                                <br>Venue: Concert Ground
                             </p> -->
                             <!-- <a href="https://goo.gl/forms/3vyaN0YukfkJOVim1" class="myButton">Register</a> -->
                             <ul class="event-list">
