--- a/MobileWebsite/event/pronight.html
+++ b/MobileWebsite/event/pronight.html
@@ -91,6 +91,9 @@
                                 <li> 
                                     <a href="pro_night/shtuby.html">Shtuby - Drum &amp; Red</a> 
                                 </li>
+                                <li> 
+                                    <a href="pro_night/shaam.html">Shaam, Sama aur Shayar</a> 
+                                </li>
                                 <li id="last-list-item"> 
                                     <a href="../events.html">Back to Events</a>
                                 </li>
