--- a/MobileWebsite/event/fashion/paridhan.html
+++ b/MobileWebsite/event/fashion/paridhan.html
@@ -115,7 +115,7 @@
 
                                 <br><br><br>Date: 19 Feb
                                 <br>Time: 4:00 pm
-                                <br>Venue: Sports Complex
+                                <br>Venue: Concert Ground
                             </p>
                             <a href="https://goo.gl/forms/dDkRYD4abwoWhwjf1" class="myButton">Register</a>
                             <ul class="event-list">
