--- a/MobileWebsite/event/pro_night/rock.html
+++ b/MobileWebsite/event/pro_night/rock.html
@@ -91,7 +91,7 @@
                             <p id="event-desc" class="left">
                                 <br>Date: 19 Feb
                                 <br>Time: 7:00 pm
-                                <br>Venue: Sports Complex
+                                <br>Venue: Concert Ground
                             </p>
                             <!-- <a href="https://goo.gl/forms/3vyaN0YukfkJOVim1" class="myButton">Register</a> -->
                             <ul class="event-list">
