--- a/MobileWebsite/event/pro_night/shaam.html
+++ b/MobileWebsite/event/pro_night/shaam.html
@@ -65,13 +65,12 @@
                 <li><a href="../../contact.html">Contact Us</a></li>
                 <!-- <li><a href="#">LINK SEVEN</a></li> -->
             </ul>
-        </nav>
-    
+        </nav>   
         <div class="content slide" >        <!-- Add "slideRight" class to items that move right when viewing Nav Drawer   -->
             <div class="container" id="home-body">
                 <div class="row">
                     <div class="col-xs-8 col-xs-offset-2">
-                        <center><h3 id="events-heading">StandUp Comedy</h3></center>
+                        <center><h3 id="events-heading">Shaam, Sama aur Shayar</h3></center>
                     </div>
                 </div>
 
@@ -79,18 +78,25 @@
                     <div class="col-xs-8 col-xs-offset-2">
                         <center>
                             <p id="event-desc" class="justify">
-                            
-							<br>Stay tuned for more.
+                            <img class="img-responsive" style="width: 100%" src="../../img/shaam.jpeg">
+                            <br><br>"इंसान खुद की नज़र में सही होना चाहिए, दुनिया तो भगवान से भी दुखी है।"
+
+                            <br><br>Maqbool. Gangs of Wasseypur. Pink. Tamasha.
+                            <br>The stellar soundtrack of Gulaal, and the evergreen, award-winning number "Aarambh Hai Prachanda".
+                            <br>The genius that produced them all and made them shine amongst everything else, is all set to illuminate your hearts and minds this EngiFest.
+
+                            <br><br>Piyush Mishra, one of NSD's most eminent luminaries shall be here at EngiFest Infinity, on the 20th of February, 4pm onwards.
+                            The OAT shall shine in the glory of his sharp wit and intellectual panache. Be there.
                             </p>
-                            <!-- <p id="event-desc" class="left">
+                            <p id="event-desc" class="left">
                                 Date: 20 Feb
-                                <br>Time: 7:00 pm
-                                <br>Venue: Concert Ground
-                            </p> -->
+                                <br>Time: 4:00 pm
+                                <br>Venue: OAT
+                            </p>
                             <!-- <a href="https://goo.gl/forms/3vyaN0YukfkJOVim1" class="myButton">Register</a> -->
                             <ul class="event-list">
                                 <li id="last-list-item"> 
-                                    <a href="../informal.html">Back to Informal Events</a>
+                                    <a href="../pronight.html">Back to Pro Shows Events</a>
                                 </li>
                             </ul>
                         </center>
